Jupyter Notebook testeado y funciona bien

--- a/API_code/api-tests.ipynb
+++ b/API_code/api-tests.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Testing the Star Wars API"
+    "# Testing the Star Wars API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This Jupyter notebook was made to test the API, first we import the required packages. Before we start, run the api.py file with Python."
    ]
   },
   {
@@ -15,6 +22,13 @@
    "source": [
     "from helpers.mongoConnection import insert, read\n",
     "import requests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To make easier the testing in somebody else's computer, I've exported the Database with the sentences into a json file, the following code can be used to import all the sentences into a new Mongo database. It can be imported directly from Mongo DB as well."
    ]
   },
   {
@@ -45,6 +59,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hello World"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first thing to test is the connection with the API, for this aim, the endpoint /salute was created."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
@@ -63,6 +91,20 @@
    "source": [
     "res = requests.get(\"http://127.0.0.1:5000/salute\")\n",
     "res.text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Adding quotes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2)** Once we know that the API is working, the first thing to do is to check if we can add a new sentence with the following code:"
    ]
   },
   {
@@ -133,15 +175,138 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "It worked and the sentence was added to the database."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To keep checking the function, if we try to add a quote which is already in the database:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Error': 'The sentence is already in the list'}"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence = {\n",
+    "    \"name\":\"Boba Fett\",\n",
+    "    \"army\":\"Bounty hunters\", \n",
+    "    \"movie\":\"The Empire Strikes Back\",\n",
+    "    \"quote\":\"He's no good to me dead\"\n",
+    "}\n",
+    "res = requests.get(\"http://127.0.0.1:5000/quotes/new\", params=sentence)\n",
+    "res.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The API gives an error and informs that the quote already exists."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Furthermore, if we try to add a wrong army or a movie not included in the API:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Error': 'You have to chose between Rebellion, Empire and Bounty hunters'}"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence = {\n",
+    "    \"name\":\"Boba Fett\",\n",
+    "    \"army\":\"AAAAAAAAAAAA\", \n",
+    "    \"movie\":\"The Empire Strikes Back\",\n",
+    "    \"quote\":\"He's no good to me dead\"\n",
+    "}\n",
+    "res = requests.get(\"http://127.0.0.1:5000/quotes/new\", params=sentence)\n",
+    "res.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Error': 'Not a Star Wars Movie'}"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence = {\n",
+    "    \"name\":\"Boba Fett\",\n",
+    "    \"army\":\"Bounty hunters\", \n",
+    "    \"movie\":\"The Lord of the Rings\",\n",
+    "    \"quote\":\"He's no good to me dead\"\n",
+    "}\n",
+    "res = requests.get(\"http://127.0.0.1:5000/quotes/new\", params=sentence)\n",
+    "res.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In both cases there is an error informing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calling functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we are calling all the quotes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +315,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -178,28 +343,33 @@
        " {'name': 'Darth Vader', 'quote': 'Obi-Wan has taught you well'}]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data = res.json()\n",
-    "data"
+    "data[:5]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 63,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "res = requests.get(\"http://127.0.0.1:5000/quotesbyarmy/Rebellion\")"
+    "It gives all the quotes stored in the DB and who said it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we are calling the quotes by army, for example \"Rebellion\"."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -211,43 +381,102 @@
        "  'quote': \"These aren't the droids you're looking for\"},\n",
        " {'name': 'Obi-Wan Kenobi',\n",
        "  'quote': \"They'll soon be back, and in greater numbers\"},\n",
-       " {'name': 'Luke Skywalker', 'quote': 'Your Thoughts betray you father'}]"
+       " {'name': 'Luke Skywalker', 'quote': 'Your Thoughts betray you father'},\n",
+       " {'name': 'Admiral Ackbar', 'quote': \"It's a trap!!!\"}]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res.json()"
+    "res = requests.get(\"http://127.0.0.1:5000/quotesbyarmy/Rebellion\")\n",
+    "res.json()[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To test what happens if we introduce an army not included in the movies, for example \"Orks\"."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Error': 'You have to chose between Rebellion, Empire and Bounty hunters'}"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = requests.get(\"http://127.0.0.1:5000/quotesbyarmy/Orks\")\n",
+    "res.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It gives an error and tells you the 3 possible armies."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we call the quotes by the movie characters, for example with Princess Leia."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'name': 'Princess Leia',\n",
-       "  'quote': \"Aren't you a little short for a stormtrooper?\"}]"
+       "  'quote': \"Aren't you a little short for a stormtrooper?\"},\n",
+       " {'name': 'Princess Leia',\n",
+       "  'quote': 'We have Powerful friends, you will regret this'},\n",
+       " {'name': 'Princess Leia',\n",
+       "  'quote': \"Help me, Obi-Wan Kenobi. You're my only hope\"},\n",
+       " {'name': 'Princess Leia',\n",
+       "  'quote': 'Somebody get this walking carpet out of my way!'},\n",
+       " {'name': 'Princess Leia',\n",
+       "  'quote': 'Why you stuck up, half witted, scruffy looking nerf herder!'}]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "res = requests.get(\"http://127.0.0.1:5000/quotesbycharacter/Princess Leia\")\n",
-    "res.json()"
+    "res.json()[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To check what happens if we introduce a character not included in the movies we are going to look for Homer Simpson."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -256,76 +485,85 @@
        "{'Error': 'The character is still not in the Database'}"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res = requests.get(\"http://127.0.0.1:5000/quotesbycharacter/Manolo\")\n",
+    "res = requests.get(\"http://127.0.0.1:5000/quotesbycharacter/Homer Simpson\")\n",
     "res.json()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The last callable function is to filter by movies. We are going to test with \"The Empire Strikes Back\" (The best movie ever)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Princess Leia',\n",
-       "  'quote': \"Aren't you a little short for a stormtrooper?\"},\n",
-       " {'name': 'Obi-Wan Kenobi',\n",
-       "  'quote': \"These aren't the droids you're looking for\"},\n",
-       " {'name': 'Obi-Wan Kenobi',\n",
-       "  'quote': \"They'll soon be back, and in greater numbers\"}]"
+       "[{'name': 'Darth Vader',\n",
+       "  'quote': \" You are beaten! It is useless to resist. Don't let yourself be destroyed as Obi-Wan did\"},\n",
+       " {'name': 'Darth Vader', 'quote': 'Impressive... most impressive'},\n",
+       " {'name': 'Darth Vader', 'quote': 'No, I am your father'},\n",
+       " {'name': 'Darth Vader',\n",
+       "  'quote': \"I am altering the deal. Pray I don't alter it any further\"},\n",
+       " {'name': 'Darth Vader',\n",
+       "  'quote': 'Luke, you can destroy the Emperor. He has foreseen this. It is your destiny! Join me, and together, we can rule the galaxy as father and son!'}]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res = requests.get(\"http://127.0.0.1:5000/quotesbymovie/A New Hope\")\n",
-    "res.json()"
+    "res = requests.get(\"http://127.0.0.1:5000/quotesbymovie/The Empire Strikes Back\")\n",
+    "res.json()[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To check what happens if we call for a wrong movie:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 164,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Error': 'The movie is still not in the database'}"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = requests.get(\"http://127.0.0.1:5000/quotesbymovie/The Lord of the Rings\")\n",
+    "res.json()"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "It gives an error informing that the movie is not in the DB."
+   ]
   },
   {
    "cell_type": "code",
